DBML, conexiones correctas NO MODIFICAR DBML

--- a/GuardaPass/GuardaPass/App.config
+++ b/GuardaPass/GuardaPass/App.config
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   
+  <configSections>
+  </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-RumurciataWebApi-20160507014554.mdf;Initial Catalog=aspnet-RumurciataWebApi-20160507014554;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="RumurciataDB" connectionString="workstation id=rumurciata.mssql.somee.com;packet size=4096;user id=rumurciata_SQLLogin_1;pwd=qkzprkbzr9;data source=rumurciata.mssql.somee.com;persist security info=False;initial catalog=rumurciata" providerName="System.Data.SqlClient" />
-    <add name="rumurciataConnectionString" connectionString="Data Source=rumurciata.mssql.somee.com;Initial Catalog=rumurciata;Persist Security Info=False;User ID=rumurciata_SQLLogin_1;Password=qkzprkbzr9;Packet Size=4096;Workstation ID=rumurciata.mssql.somee.com" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-RumurciataWebApi-20160507014554.mdf;Initial Catalog=aspnet-RumurciataWebApi-20160507014554;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="RumurciataDB" connectionString="workstation id=rumurciata.mssql.somee.com;packet size=4096;user id=rumurciata_SQLLogin_1;pwd=qkzprkbzr9;data source=rumurciata.mssql.somee.com;persist security info=False;initial catalog=rumurciata"
+      providerName="System.Data.SqlClient" />
+    <add name="rumurciataConnectionString" connectionString="Data Source=rumurciata.mssql.somee.com;Initial Catalog=rumurciata;Persist Security Info=False;User ID=rumurciata_SQLLogin_1;Password=qkzprkbzr9;Packet Size=4096;Workstation ID=rumurciata.mssql.somee.com"
+      providerName="System.Data.SqlClient" />
+    <add name="GuardaPass.Properties.Settings.rumurciataConnectionString"
+      connectionString="Data Source=rumurciata.mssql.somee.com;Initial Catalog=rumurciata;User ID=rumurciata_SQLLogin_1;Password=qkzprkbzr9"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
